2006-07-01  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: Fixed weapon frames, modified behaviour of explosives
	* effects.cc, effects.h: fixed explosives, and modified their
	  behaviour a bit
	* usecode/ucsched.cc: Fixed next_frame_max and npc_frame opcodes
	* content/sifixes/src/spells.uc: Fixed dumb bug in modified Vibrate
	  spell

2005-06-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/useval.cc: fix truncated strings when concatenating

2005-06-26    <jeff@mini.nerble.net>

	* mapedit/shapelst.cc,etc:  Rewrote shape-browser renderer so
	scrolling works correctly.

2005-06-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/spiked_shield.shp: fixed transparency, added back by Crysta

2005-06-16  Tristan Tarrant <nadir@users.sourceforge.net>
	* files/rwregress.cc: removed use of deprecated strstream and
	  used sstream instead

2005-06-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* audio/Midi.cc: fix crash on exit when midi is disabled
	* data/bg/faces.shp: new Julia face by Berty Zhang
	* data/bg/gorget.shp: updated gorgets/collars by Crysta

2005-06-15  Ryan Nunn  <colourles@users.sourceforge.net>
	* game.cc : Set 'game_type' to NONE when in the Exult Menu
	* audio/midi_drivers/XMidiSequence.cpp, audio/midi_drivers/XMidiFile.*,
	  audio/midi_drivers/LowLevelMidiDriver.* : Improvements and fixes for 
	  when using Exult with a Real MT32 (avoiding Buffer Overflows and 
	  pauses)

2005-06-14  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* sigame.cc, bggame.cc: more constants from flex headers

2005-06-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/various: new art by 'Crysta the Elf'
	* sigame.cc, bggame.cc: use constants from headers instead of fixed numbers

2005-06-13  Ryan Nunn  <colourles@users.sourceforge.net>
	* audio/midi/TimidityMidiDriver.cpp : Report Timidity Error messages
	  if initiliaztion fails