@@ -43,3 +43,4 @@ custom_sword.shp
 main_gauche.shp
 magic_helmet.shp
 throwing_axe.shp
+lightning_whip.shp
